--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -93,13 +93,13 @@ jobs:
       # ****************************************************************************************** #   
 
 
-      # - name: Stop and remove container if running
-      #   run: |
-      #    docker ps -q --filter "name=simpleapp" | grep -q . && docker stop simpleapp && docker rm -fv simpleapp
+      - name: Stop and remove container if running
+        run: |
+         docker ps -q --filter "name=speech" | grep -q . && docker stop speech && docker rm -fv speech
        
       - name: Run Docker Image to serve users
         run: |
-         docker run -d -p 8080:8080 --name=simpleapp -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+         docker run -d -p 8080:8080 --name=speech -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
       - name: Clean previous images and containers
         run: |
          docker system prune -f
